Add AuthenticationController, Gateway for MoveIT API and Views for Login & Upload File

--- a/MoveIT/MoveIT/appsettings.json
+++ b/MoveIT/MoveIT/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "MoveIT": {
+    "API_USER": "interview.tomas.tomov",
+    "API_PASSWORD": "B5]/r@B-",
+    "AUTH_URL": "https://mobile-1.moveitcloud.com/api/v1/auth/token"
+  },
   "AllowedHosts": "*"
 }
