Add service layer for file processing

--- a/MoveIT/MoveIT/MoveIT.csproj
+++ b/MoveIT/MoveIT/MoveIT.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MoveIT.Gateways\MoveIT.Gateways.csproj" />
+    <ProjectReference Include="..\MoveIT.Services\MoveIT.Services.csproj" />
   </ItemGroup>
 
 </Project>
