Add implementation for uploading file to directory

--- a/MoveIT/MoveIT/appsettings.json
+++ b/MoveIT/MoveIT/appsettings.json
@@ -8,7 +8,8 @@
   "MoveIT": {
     "API_USER": "interview.tomas.tomov",
     "API_PASSWORD": "B5]/r@B-",
-    "AUTH_URL": "https://mobile-1.moveitcloud.com/api/v1/auth/token"
+    "AUTH_URL": "https://mobile-1.moveitcloud.com/api/v1/auth/token",
+    "UPLOAD_FILE_TO_DIRECTORY_URL": "https://mobile-1.moveitcloud.com/api/v1/folders/{0}/files"
   },
   "AllowedHosts": "*"
 }
