Add uploading files to base folder

--- a/MoveIT/MoveIT/appsettings.json
+++ b/MoveIT/MoveIT/appsettings.json
@@ -9,7 +9,8 @@
     "API_USER": "interview.tomas.tomov",
     "API_PASSWORD": "B5]/r@B-",
     "AUTH_URL": "https://mobile-1.moveitcloud.com/api/v1/auth/token",
-    "UPLOAD_FILE_TO_DIRECTORY_URL": "https://mobile-1.moveitcloud.com/api/v1/folders/{0}/files"
+    "UPLOAD_FILE_TO_DIRECTORY_URL": "https://mobile-1.moveitcloud.com/api/v1/folders/{0}/files",
+    "BASE_FOLDER_ID": 190059809
   },
   "AllowedHosts": "*"
 }
